@@ -1,8 +1,12 @@
+2017-12-07  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/popup.fs: Remove some bugs in edhist.
+
 2017-12-02  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* src/io.c: Remove index bugs in string io functions.
 
-	* examples/site-lib/marks.fs (marks->string):  port-puts
+	* examples/site-lib/marks.fs (marks->string): port-puts
 	requires an output io object.
 
 2017-12-01  Michael Scholz  <mi-scholz@users.sourceforge.net>
